Added the Step Fitter plugin Small bugfix in MeanSquareDisplacement plugin (maxFitTime=0)

--- a/plugins.config
+++ b/plugins.config
@@ -1,7 +1,7 @@
 # Name: Single Molecule Biophysics Plugins
 # Author: C.M. Punter
-# Version: 3.0
-# Date: 2015/05/06
+# Version: 3.1
+# Date: 2015/07/09
 
 Plugins>Single Molecule Biophysics>Analyze, "Peak Finder", analyze.PeakFinder
 Plugins>Single Molecule Biophysics>Analyze, "Peak Fitter", analyze.PeakFitter
@@ -13,6 +13,7 @@ Plugins>Single Molecule Biophysics>Analyze, "Mean Square Displacement", analyze.
 Plugins>Single Molecule Biophysics>Analyze, "Step Size Distribution", analyze.StepSizeDistribution
 Plugins>Single Molecule Biophysics>Analyze, "Z-Axis Profile Panel", analyze.ZAxisProfilePanel
 Plugins>Single Molecule Biophysics>Analyze, "Colocalize Peaks",  analyze.Colocalization
+Plugins>Single Molecule Biophysics>Analyze, "Step Fitter",  analyze.StepFitter
 
 Plugins>Single Molecule Biophysics>Process, "Discoidal Averaging Filter", process.DiscoidalAveragingFilter
 Plugins>Single Molecule Biophysics>Process, "Moving Average Filter", process.MovingAverageFilter
